# ChangeLog for Gentoo Linux System Intialization ("rc") scripts 
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL
# Written by Daniel Robbins (drobbins@gentoo.org)

* rc-scripts 1.4.3.10 (04 Aug 2003)

  04 Aug 2003; Martin Schlemmer <azarah@gentoo.org>:

    Add /bin/rc-status and 'show' support to /sbin/rc-update (long overdue),
    bug #4222, thanks to Sean E Russell <ser@germane-software.com>,
    Michael Frysinger <vapier@gentoo.org> (/bin/rc-status) and for the 'show'
    stuff to /sbin/rc-update, Max Kalika <max@gentoo.org>.

    Fixed modules-update to only do the /etc/modprobe.conf generation if we
    are actually running a 2.5+ kernel.

    Add pop3 entries to /etc/services, bug #25501.

    Add a switch for devfsd startup to /etc/conf.d/rc, fix /sbin/rc to check
    RC_DEVFSD_STARTUP.  Closes bug #24361, thanks to patches from
    Kurt V. Hindenburg <khindenburg@cherrynebula.net>.

    Add LVM2 support thanks to Max Kalika <max@gentoo.org> (bug #21908).

    Add IPV6 versions of localhost and co in /etc/hosts, bug #25859.

    Fix type-o in /sbin/rc-update, bug #25854.

  29 Jul 2003; Martin Schlemmer <azarah@gentoo.org>:

    Tweak /etc/init.d/check{root,fs} to set retval after each fsck call,
    and not the whole block.  Tweak check checkroot to reboot if need be
    (This is with sufficient warning and message).  Tweak checkfs to not
    drop to a sulogin if return code 2 or 3 is given - as we did not
    mount the filesystems yet, we should not need to reboot ... bug #25398.

    Add '-T' option to fsck (/etc/init.d/check{root,fs} - requested by
    Michael Frysinger <vapier@gentoo.org>.

  28 Jul 2003; Martin Schlemmer <azarah@gentoo.org>:

    Rework changes for the Adelie project to support boot config profiles
    better.  Added support for /etc/runlevels/LEVEL/.fake to specify which
    runlevels should be marked started or stopped without executing the