@@ -2,20 +2,6 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header$
 
-# Try to unmount all tmpfs filesystems not in use, else a deadlock may
-# occure, bug #13599.
-umount -at tmpfs &> /dev/null
-
-if [ -n "`swapon -s 2> /dev/null`" ]
-then
-	# We try to deactivate swap first because it seems
-	# to need devfsd running to work (this is not done
-	# on nodes).  The TERM and KILL stuff will zap
-	# devfsd, so...
-	ebegin "Deactivating swap"
-	swapoff -a &> /dev/null
-	eend $?
-fi
 
 # We need to properly terminate devfsd to save the permissions
 if [ -n "`ps --no-heading -C 'devfsd'`" ]
@@ -32,6 +18,17 @@ sleep 5
 ebegin "Sending all processes the KILL signal"
 killall5 -9 &> /dev/null
 eend $?
+
+# Try to unmount all tmpfs filesystems not in use, else a deadlock may
+# occure, bug #13599.
+umount -at tmpfs &> /dev/null
+
+if [ -n "`swapon -s 2> /dev/null`" ]
+then
+	ebegin "Deactivating swap"
+	swapoff -a &> /dev/null
+	eend $?
+fi
 
 # Write a reboot record to /var/log/wtmp before unmounting
 
