@@ -2,6 +2,12 @@
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL
 # Written by Daniel Robbins (drobbins@gentoo.org)
 
+  10 Aug 2003; Martin Schlemmer <azarah@gentoo.org>:
+
+    Modify /etc/init.d/halt.sh to first kill, and then deactivate swap on
+    request of Luke-Jr <luke-jr@gentoo.org>.  It should be ok now, as the
+    whole way of devfs handling changed long ago already.
+
 * rc-scripts 1.4.3.10 (04 Aug 2003)
 
   04 Aug 2003; Martin Schlemmer <azarah@gentoo.org>:
